NetBSD Problem Report #53893

From www@NetBSD.org  Sat Jan 19 07:54:21 2019
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id A9E6B7A1B3
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 19 Jan 2019 07:54:21 +0000 (UTC)
Message-Id: <20190119075420.688687A214@mollari.NetBSD.org>
Date: Sat, 19 Jan 2019 07:54:20 +0000 (UTC)
From: yarl-baudig@mailoo.org
Reply-To: yarl-baudig@mailoo.org
To: gnats-bugs@NetBSD.org
Subject: Can't build amd64 or i386 kernel with (defined KGDB && !defined DDB)
X-Send-Pr-Version: www-1.0

>Number:         53893
>Category:       kern
>Synopsis:       Can't build amd64 or i386 kernel with (defined KGDB && !defined DDB)
>Confidential:   no
>Severity:       serious
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Jan 19 07:55:00 +0000 2019
>Closed-Date:    Sat Jan 19 13:18:17 +0000 2019
>Last-Modified:  Sat Jan 19 13:20:00 +0000 2019
>Originator:     yarl
>Release:        CURRENT 20190119
>Organization:
none
>Environment:
Irrelevant
>Description:
GENERIC kernel with DDB disabled and KGDB enabled cannot be build. Here's the tail of build.sh's output:
/home/builder/git/netbsd-current/obj-amd64-debug/tooldir.NetBSD-8.0_STABLE-amd64/bin/x86_64--ne
tbsd-ld: db_memrw.o: in function `db_read_bytes':                                              
/mnt/stripped/builder/git/netbsd-current/src/sys/arch/x86/x86/db_memrw.c:114: undefined referen
ce to `db_printf'                                                                              
/home/builder/git/netbsd-current/obj-amd64-debug/tooldir.NetBSD-8.0_STABLE-amd64/bin/x86_64--n$tbsd-ld: db_memrw.o: in function `db_write_text':
/mnt/stripped/builder/git/netbsd-current/src/sys/arch/x86/x86/db_memrw.c:147: undefined refere$ce to `db_printf'
*** [netbsd] Error code 1
>How-To-Repeat:
Disable DDB and enable KGDB in either amd64 or i386 generic and try to build the kernel.
>Fix:
diff --git a/sys/arch/x86/x86/db_memrw.c b/sys/arch/x86/x86/db_memrw.c
index 22c5d32436bb..df3283bfede1 100644
--- a/sys/arch/x86/x86/db_memrw.c
+++ b/sys/arch/x86/x86/db_memrw.c
@@ -90,7 +90,9 @@ db_read_bytes(vaddr_t addr, size_t size, char *data)
 	src = (char *)addr;

 	if (db_validate_address((vaddr_t)src)) {
+#ifdef DDB
 		db_printf("address %p is invalid\n", src);
+#endif
 		return;
 	}

@@ -111,7 +113,9 @@ db_read_bytes(vaddr_t addr, size_t size, char *data)

 	while (size-- > 0) {
 		if (db_validate_address((vaddr_t)src)) {
+#ifdef DDB
 			db_printf("address %p is invalid\n", src);
+#endif
 			return;
 		}

@@ -144,7 +148,9 @@ db_write_text(vaddr_t addr, size_t size, const char *data)
 		pte = *ppte;

 		if ((pte & PG_V) == 0) {
+#ifdef DDB
 			db_printf(" address %p not a valid page\n", dst);
+#endif
 			return;
 		}


>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Sat, 19 Jan 2019 13:18:17 +0000
State-Changed-Why:
Pach applied, thanks!


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/53893 CVS commit: src/sys/arch/x86/x86
Date: Sat, 19 Jan 2019 13:17:33 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sat Jan 19 13:17:33 UTC 2019

 Modified Files:
 	src/sys/arch/x86/x86: db_memrw.c

 Log Message:
 PR kern/53893: add missing #ifdef DDB around db_printf calls.


 To generate a diff of this commit:
 cvs rdiff -u -r1.7 -r1.8 src/sys/arch/x86/x86/db_memrw.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.43 2018/01/16 07:36:43 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.