PR kern/53893: add missing #ifdef DDB around db_printf calls.